css/style.css
/* ... */
input[type="email"] {
    border-radius: 25px;
    font-size: 1rem;
    width: 141px;
    height: 8px;
    padding: 1rem;
    color: #969696;
    right: 5rem;
    border: 0;
    position: relative;
    bottom: 0rem;
    line-height: 1.5;
}





input[type="submit"] {
    border-radius: 1.42rem;
    font-size: 1rem;
    width: 6.64rem;
    height: 35px;
    /* padding: 0.5px; */
    background-color: #e2574c;
    text-align: center;
    color: #ffffff;
    position: absolute;
    border: 0;
    left: 14.3rem;
    bottom: 0.2rem;
}

/* Footer */
footer {
  text-align: center;
  font-family: "Playfair Display", serif;
  font-size: 0.9rem; /* 14/14 */
  line-height: 1.35rem;
  padding: 3.6rem 0 2.8rem 0;
  background-color: #242424;
  color: #ffffff;
}

footer a {
  color: #ffffff;
  text-decoration: underline;
}

.contact-info {
  padding: 1.07rem 0 1.07rem 0; /* top (15/14)| right | bottom (15/14) | left */
}

.address {
  color: #928479;
  padding-bottom: 1.5rem;
}

.social-media {
  font-family: 'Raleway', sans-serif;
  font-size: 0.9rem;
  line-height: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  padding-bottom: 1rem;
}

.fa {
  padding: 0.5rem;
}

.hide-text {
  display:none;
}

/* Breakpoints */
@media screen and (min-width: 600px) {
  body{
    font-size: 16px;
  }

  h2 {
    font-size: 2.375rem;
  }

  .horiz-line {
    display: none;
  }

  .header-container {
    position: relative;
    padding: 13px;
  }

  .navigation {
    position: absolute;
    top: 24px;
    left: 32%;
  }

  .new-collection {
    top: 31%;
    font-size: 1.3rem;
  }

  .season {
    top: 33%;
    left: 20.5%;
    font-size: 3rem;
    max-width: 57%;
  }

  .description {
    font-size: 1.15rem;
  }

  .products-text {
    display: block;
    padding-top: 58px;
    font-size: 1.75rem;
  }

  .category-rectangle {
    -webkit-box-flex: 2;
        -ms-flex: 2 0 50%;
            flex: 2 0 50%;
            /*flex-basis: 50%;*/
            height: 153px;
            padding:0;
  }

  .category-square {
    -webkit-box-flex: 1;
        -ms-flex: 1 0 25%;
            flex: 1 0 25%;
            /*flex-basis: 25%;*/
            height: 153px;
            padding: 0;
  }

  .trends-category {
    border-left: 8px solid white;
  }

  .womens-category {
    border-top: 0px solid white;
    border-left: 8px solid white;
  }

  .products li {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-item-align: start;
        align-self: flex-start;
    background-color: white;
    }

  footer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align:start;
        -ms-flex-align:start;
            align-items:flex-start;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }
  .footer-left {
    text-align: left;
  }

  .social-media {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }

  .social-media a {
    text-decoration: none;
  }

  .hide-text {
    display: inline;
  }
}

@media screen and (min-width: 1120px) {
  .category-rectangle {
    height: 281px;
  }

  .category-square {
    height: 281px;
  }
}

@media screen and (min-width: 1240px) {
  body {
    font-size: 16px;
  }

  .navigation {
    position: absolute;
    top: 24px;
    left: 41%;
  }

  .navigation-list li {
    font-size: 1rem;
    line-height: 2rem;
  }

  .hero {
    background-size: cover, 250px 615px, contain;
    height: 550px;
    position: relative;
  }

  .new-collection {
    top: 38.5%;
  }

  .season {
    font-size: 4rem;
    top: 41%;
    left: 25%;
  }

  .products-text {
    display: block;
    padding-top: 133px;
    font-size: 2.375rem;
  }

  .category-rectangle {
    -webkit-box-flex: 2;
        -ms-flex: 2 0 50%;
            flex: 2 0 50%;
    height: 312px;
  }

  .category-square {
    -webkit-box-flex: 1;
        -ms-flex: 1 0 25%;
            flex: 1 0 25%;
    height: 312px;
  }
}

